# servant-halogen-pseudo-ssr

./: .dockerignore  .gitignore  CHANGELOG.md  Main.hs  backend.Dockerfile  config.nix  docker-compose.yml  docker.nix  frontend.Dockerfile  index.html  nginx.conf  package.json  release.nix  servant-halogen-pseudo-ssr.cabal  shell.nix  spago.dhall
nix/: sources.json
