cabal-version:       2.4
-- Initial package description 'servant-halogen-pseudo-ssr.cabal' generated
--  by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                servant-halogen-pseudo-ssr
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              PureFunctor
maintainer:          purefunctor@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

executable servant-halogen-pseudo-ssr
  main-is:             Main.hs
  -- other-extensions:
  build-depends:       base ^>=4.14.1.0,
                       bytestring,
                       http-media,
                       servant, 
                       servant-server,
                       req,
                       mtl,
                       tagsoup,
                       wai,
                       wai-middleware-static,
                       warp,
  -- hs-source-dirs:
  default-language:    Haskell2010
